<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">IPLocator</string>
    <string name="about">About</string>
    <string name="information">Information</string>
    <string name="ip_address">IP address</string>
    <string name="continent">Continent</string>
    <string name="country">Country</string>
    <string name="postal_code">Postal code</string>
    <string name="currency">Currency</string>
    <string name="timezone">Timezone</string>
    <string name="region">Region</string>
    <string name="city">City</string>
    <string name="current_time">Current time</string>
    <string name="lon">LON: %s</string>
    <string name="lat">LAT: %s</string>
    <string name="language">Language</string>
    <string name="offset" tools:keep="@string/offset">Offset</string>
    <string name="isp">ISP</string>
    <string name="todo">TODO</string>
    <string name="proxy">Proxy</string>
    <string name="threat">Threat</string>
    <string name="enter_ip">Enter IP address</string>
    <string name="about_ipdata"> Application uses ipdata.com api. ipdata.co is a Fast,
        Reliable and Clean service that allows you to look up the location of an IP Address and other data. Application is for educational use only. </string>
    <string name="invalid_search">Invalid Search</string>
    <string name ="invalid_address">\'%s\' is not a valid public IP address</string>
    <string name="null_search">Search query cannot be null</string>
    <string name="dismiss">Dismiss</string>
    <string name="address_notfound">Address not found</string>
    <string name="error">Error</string>
    <string name="no_internet">No internet connection</string>
</resources>
